--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm install
 
       - name: build linux
-        run: npm run dist:linux
+        run: npm run dist:linux -- --publish never
 
       - name: upload linux artifact
         uses: actions/upload-artifact@v4
@@ -64,7 +64,7 @@ jobs:
         run: npm install
 
       - name: build windows
-        run: npm run dist:win
+        run: npm run dist:win -- --publish never
 
       - name: upload windows artifact
         uses: actions/upload-artifact@v4
