--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
       "!python_backend/build/**/*",
       "!python_backend/__pycache__/**/*"
     ],
-    "extraResources": [
-      {
-        "from": "python_backend/dist/backend",
-        "to": "backend/backend"
-      }
-    ],
     "linux": {
       "target": ["AppImage"],
       "category": "Utility",
-      "icon": "src/assets/logo icon.png"
+      "icon": "src/assets/logo icon.png",
+      "extraResources": [
+        {
+          "from": "python_backend/dist/backend",
+          "to": "backend/backend"
+        }
+      ]
     },
     "appImage": {
       "artifactName": "${productName}-${version}.AppImage"
@@ -49,11 +49,23 @@
     "afterPack": "./afterPack.js",
     "mac": {
       "target": ["dmg"],
-      "icon": "src/assets/logo icon.png"
+      "icon": "src/assets/logo icon.png",
+      "extraResources": [
+        {
+          "from": "python_backend/dist/backend",
+          "to": "backend/backend"
+        }
+      ]
     },
     "win": {
       "target": ["nsis"],
-      "icon": "src/assets/logo icon.png"
+      "icon": "src/assets/logo icon.png",
+      "extraResources": [
+        {
+          "from": "python_backend/dist/backend.exe",
+          "to": "backend/backend.exe"
+        }
+      ]
     }
   }
 }
